' *******************************************************************************
' Copyright (c) 2026 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' https://www.apache.org/licenses/LICENSE-2.0
'
' SPDX-License-Identifier: Apache-2.0
' *******************************************************************************

@startuml ipc_class_diagram

title IPC: Class Diagram

legend top left
    |= Color         |= Description                    |
    | <#Beige>       | Base classes                    |
    | <#LightPink>   | IPC components                  |
    | <#LightCoral>  | score::communication            |
endlegend

class "PtpTimeInfo" as time_info #Beige {
    +ptp: uint64
    +local_time: uint64
    +status: int
}

abstract class "BaseMachine" as base_machine #Beige {
    +GetName(): string
    +Init(): bool
}

abstract class "ReactiveMachine" as reactive_machine #Beige {
}

abstract class "Consumer<T>" as consumer #Beige {
    +OnMessage(data: T): void
}

abstract class "Receiver<T>" as receiver #Beige {
    +Init(): bool
    +Receive(): optional<T>
}

class "PublisherImpl<DataType>" as publisher_impl #LightPink {
    -comm_publisher_: score::mw::com::Skeleton<DataType>
    +OnMessage(data: DataType): void
    +Init(): bool
}

class "ReceiverImpl<DataType>" as receiver_impl #LightPink {
    -comm_subscriber_: score::communication::Subscriber<DataType>
    +Init(): bool
    +Receive(): optional<DataType>
}

class "score::mw::com::AsSkeleton<T>" as comm_publisher #LightCoral {
    Communication abstraction
    ...
    +Send(data: T): void
    +OfferService(): bool
}

class "score::mw::com::AsProxy<T>" as comm_subscriber #LightCoral {
    Communication abstraction
    ...
    +Receive(): optional<T>
    +FindService(): bool
}

base_machine <|-- reactive_machine
reactive_machine <|-- publisher_impl
consumer <|.. publisher_impl
receiver <|-- receiver_impl

publisher_impl --> comm_publisher : uses
receiver_impl --> comm_subscriber : uses

publisher_impl --> time_info : processes
receiver_impl --> time_info : processes

@enduml
